--- a/app/views/drugs/index.html.erb
+++ b/app/views/drugs/index.html.erb
@@ -1,39 +1,5 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Drugs</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Price</th>
-      <th>Company</th>
-      <th>Market available</th>
-      <th>Professional comment</th>
-      <th>Invented at</th>
-      <th>Market status</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @drugs.each do |drug| %>
-      <tr>
-        <td><%= drug.name %></td>
-        <td><%= drug.price %></td>
-        <td><%= drug.company %></td>
-        <td><%= drug.market_available %></td>
-        <td><%= drug.professional_comment %></td>
-        <td><%= drug.invented_at %></td>
-        <td><%= drug.market_status %></td>
-        <td><%= link_to 'Show', drug %></td>
-        <td><%= link_to 'Edit', edit_drug_path(drug) %></td>
-        <td><%= link_to 'Destroy', drug, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<%= drugs_by_price_bar %>
 <br>
-
 <%= link_to 'New Drug', new_drug_path %>
