--- a/app/views/drugs/show.html.erb
+++ b/app/views/drugs/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<%= image_tag @drug.image, alt: @drug.name %>
 <p>
   <strong>Name:</strong>
   <%= @drug.name %>
